# wasm-web-starter

./: Cargo.toml  LICENSE  README.md
www/: index.js  package-lock.json  package.json
